WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243211
CoreAudioSharedUnit needs to reconfigure in case of kParamError only once
https://bugs.webkit.org/show_bug.cgi?id=243211
Summary
CoreAudioSharedUnit needs to reconfigure in case of kParamError only once
youenn fablet
Reported
2022-07-26 07:47:12 PDT
CoreAudioSharedUnit needs to reconfigure in case of kParamError only once
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-26 07:48:23 PDT
<
rdar://problem/97605896
>
youenn fablet
Comment 2
2022-07-26 07:50:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2737
EWS
Comment 3
2022-07-27 05:47:57 PDT
Committed
252864@main
(b8ccca81decf): <
https://commits.webkit.org/252864@main
> Reviewed commits have been landed. Closing PR #2737 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug