CoreAudioSharedUnit needs to reconfigure in case of kParamError only once https://bugs.webkit.org/show_bug.cgi?id=243211

Reviewed by Eric Carlson.

In case of kParamError, we reconfigure the audio unit asynchronously on main thread.
There might be several kParamError cases before the audio unit is reconfigured.
But we only need to reconfigure the audio unit once.
Introduce m_shouldUpdateMicrophoneSampleBufferSize to limit reconfiguration.

* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.cpp:
(WebCore::CoreAudioSharedUnit::configureMicrophoneProc):
(WebCore::CoreAudioSharedUnit::processMicrophoneSamples):
* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.h:

Canonical link: https://commits.webkit.org/252864@main